Add Ukraine support

--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
       text-decoration: none;
     }
 
+    header {
+      background: white;
+      padding-top: 2em;
+    }
+
     blockquote {
       margin: 0;
       padding: 0.5rem 1rem;
@@ -79,7 +84,7 @@
       flex-direction: row;
     }
 
-    .flex-row > * {
+    .flex-row>* {
       max-width: 50%;
     }
 
@@ -96,6 +101,10 @@
 </head>
 
 <body>
+  <header>
+    <h2 class="center" style="margin: 0;">We stand with Ukraine 🇺🇦</h2>
+    <hr>
+  </header>
   <div id="document">
     <div id="content">
       <p class="center">
@@ -115,7 +124,8 @@
         constituent areas to take responsibility for themselves.
       </p>
 
-      <p class="center">Scroll down to <a href="#signatures">add your voice</a> and learn how you can support this effort.</p>
+      <p class="center">Scroll down to <a href="#signatures">add your voice</a> and learn how you can support this
+        effort.</p>
 
       <p class="center">
         Speak your truth!<br />
@@ -215,7 +225,8 @@
         to MKP Intermountain was clear and unambiguous. Unification was
         represented primarily as an administrative streamlining. Upon
         unification, decision making for the NWTA was to remain with each
-        local area. From the “<a href="unification-overview.pdf">Unification Overview</a>” document circulated <em>prior</em>
+        local area. From the “<a href="unification-overview.pdf">Unification Overview</a>” document circulated
+        <em>prior</em>
         to the vote to unify:
       </p>
       <blockquote>
@@ -420,18 +431,26 @@
       <p>Men are waiting.</p>
 
       <div id="signatures" class="container responses">
-        <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRZPBXnb2zgcsgE1IOXC7sGqpu-FZ0G00xCWvbVYDtqdmy8EbmX2XAAdpUP1qVGzoRGeJTQv5KNdXVX/pubhtml?gid=542723662&amp;single=true&amp;widget=true&amp;headers=false" width="640" height="400" marginheight="0" marginwidth="0">Loading…</iframe>
+        <iframe
+          src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRZPBXnb2zgcsgE1IOXC7sGqpu-FZ0G00xCWvbVYDtqdmy8EbmX2XAAdpUP1qVGzoRGeJTQv5KNdXVX/pubhtml?gid=542723662&amp;single=true&amp;widget=true&amp;headers=false"
+          width="640" height="400" marginheight="0" marginwidth="0">Loading…</iframe>
       </div>
 
-      <p class="center"><em>Signatures are meant to convey general support and do not imply 100% agreement with every point listed herein.</em></p>
+      <p class="center"><em>Signatures are meant to convey general support and do not imply 100% agreement with every
+          point listed herein.</em></p>
 
       <div id="signatures" class="container">
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdMZfvtpjeESslV-Pz7WVAhorteS9Ie4_3TlXvImrVVU7DRcQ/viewform?embedded=true" width="640" height="1000" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        <iframe
+          src="https://docs.google.com/forms/d/e/1FAIpQLSdMZfvtpjeESslV-Pz7WVAhorteS9Ie4_3TlXvImrVVU7DRcQ/viewform?embedded=true"
+          width="640" height="1000" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
       </div>
 
       <div class="flex-row">
         <img src="rhpeterson-venmo.png">
-        <p>Contributions needed and welcome! Donations will increase visibility of this effort by funding a Google Adwords campaign to list this site at or near the top of a Google search for the ManKind Project or MKPUSA. Funds remaining after conclusion of this effort will be held in reserve for the NWTA general scholarship fund.</p>
+        <p>Contributions needed and welcome! Donations will increase visibility of this effort by funding a Google
+          Adwords campaign to list this site at or near the top of a Google search for the ManKind Project or MKPUSA.
+          Funds remaining after conclusion of this effort will be held in reserve for the NWTA general scholarship fund.
+        </p>
       </div>
 
       <hr />
