--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
 
 <body>
   <header>
-    <h2 class="center" style="margin: 0;">We stand with Ukraine 🇺🇦</h2>
-    <hr>
+    <h2 class="center" style="margin: 0;padding-bottom: 1em;">We stand with Ukraine 🇺🇦</h2>
+    <hr style="margin:0;">
   </header>
   <div id="document">
     <div id="content">
