--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
       margin: 0;
       padding: 2em 8%;
       background: white;
+      box-shadow: 0 0.2em 0.5em -0.15em black;
     }
 
     .responses {
