--- a/index.html
+++ b/index.html
@@ -83,6 +83,10 @@
       width: fit-content;
     }
 
+    hr {
+      margin: 1em 0;
+    }
+
     .center {
       text-align: center;
     }
@@ -98,10 +102,6 @@
 
     .flex-justify-center {
       justify-content: center;
-    }
-
-    #content {
-      padding-top: 2em;
     }
 
     .venmo {
@@ -132,7 +132,7 @@
 <body>
   <div id="document">
     <div id="content">
-      <h2 class="card">We stand with Ukraine 🇺🇦</h2>
+      <h2 class="center">We stand with Ukraine 🇺🇦</h2>
       <hr>
       <p class="center small">
         <em>This website is neither produced, sponsored by, or affiliated with the ManKind Project or MKPUSA.</em>
