Update title, move ukraine statement to bottom

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>MKPUSA: WTF?!</title>
+  <title>Engage!</title>
   <style>
     html,
     body {
@@ -66,7 +66,7 @@
       font-size: 0.95em;
     }
 
-    #document {
+    .document {
       border: 0;
       margin: 0;
       padding: 2em 8%;
@@ -130,10 +130,8 @@
 </head>
 
 <body>
-  <div id="document">
-    <div id="content">
-      <h2 class="center">We stand with Ukraine 🇺🇦</h2>
-      <hr>
+  <div class"document">
+    <div class="content">
       <p class="center small">
         <em>This website is neither produced, sponsored by, or affiliated with the ManKind Project or MKPUSA.</em>
       </p>
@@ -435,7 +433,7 @@
         </li>
         <li>
           Actively facilitate men’s work in general (and the NWTA in
-          particular) instead of standing in its way<a id="f3-inline" href="#f3"><sup>3</sup></a>,
+          particular) instead of standing in its way,<a id="f3-inline" href="#f3"><sup>3</sup></a>
         </li>
         <li>
           Seek representative input from constituent areas and accord them a
@@ -535,6 +533,12 @@
           representations made prior to and during unification.
         </li>
       </ul>
+    </div>
+  </div>
+  <div class="document">
+    <div class="content">
+      <h2 class="center">We stand with Ukraine 🇺🇦</h2>
+      <hr>
     </div>
   </div>
 </body>
