--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 </head>
 
 <body>
-  <div class"document">
+  <div class="document">
     <div class="content">
       <p class="center small">
         <em>This website is neither produced, sponsored by, or affiliated with the ManKind Project or MKPUSA.</em>
