Document style changes

--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
       background: white;
       box-shadow: 0 0.2em 0.5em -0.15em black;
     }
+    
+    .document:not(:first-child) {
+      margin-bottom: 2em;
+    }
 
     .responses {
       border: 1px solid black;
@@ -538,7 +542,6 @@
   <div class="document">
     <div class="content">
       <h2 class="center">We stand with Ukraine 🇺🇦</h2>
-      <hr>
     </div>
   </div>
 </body>
