--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       box-shadow: 0 0.2em 0.5em -0.15em black;
     }
     
-    .document:not(:first-child) {
+    .document:not(:last-child) {
       margin-bottom: 2em;
     }
 
