--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
   </div>
   <div class="document">
     <div class="content">
-      <h2 class="center">We stand with Ukraine 🇺🇦</h2>
+      <h2 style="margin:0;" class="center">We stand with Ukraine 🇺🇦</h2>
     </div>
   </div>
 </body>
