Reorder and add new banner

--- a/index.html
+++ b/index.html
@@ -132,25 +132,24 @@
 <body>
   <div class="document">
     <div class="content">
+      <h3>Calling on MKPUSA to honor its agreements and return the NWTA to local control</h3>
+    </div>
+  </div>
+  <div class="document">
+    <div class="content">
       <p class="center small">
         <em>This website is neither produced, sponsored by, or affiliated with the ManKind Project or MKPUSA.</em>
       </p>
 
       <p>
-        <strong>Summary:</strong> During the process of unification with the
-        national organization, MKPUSA explicitly represented that the NWTA
-        would remain under the control of local area(s). At the onset of the
-        Covid-19 pandemic (and with presumed good intentions), MKPUSA departed
-        from its agreement and disallowed NWTAs nationwide. Two years later,
-        men who wish to be vaccinated have been; others understand the risks
-        of gathering. For all of the following reasons (see below), it is now
-        time for MKPUSA to facilitate men's work by honoring its stated
-        agreement, returning the NWTA to local control, and allowing men and
-        constituent areas to take responsibility for themselves.
+        In 2009, I knocked on a door. A man answered and searched my soul with his eyes. If I stepped through that door, my life would never be the same. Somehow I knew he spoke the truth. In the next 48 hours, I was seen, I was transformed, and I fell in love with life. Men I had never met cared enough to save me. I have never been the same.
+        </p>
+      <p>
+        Since then I have given back, stepping into leadership to help develop new warrior weekends. 75 men have accepted my invitation to the New Warrior Training Adventure (NWTA). I have seen these men reborn to a world of joy, hope, and possibility, and with each new “birth,” I’ve seen the power of initiation through their eyes.
       </p>
-
-      <p class="center">Scroll down to <a href="#signatures">add your voice</a> and learn how you can support this
-        effort.</p>
+      <p>
+        Like many of you, I’ve mourned the loss of the NWTA. Now is the time to bring it back—to awaken a new world of possibility. Every word below was written to that end. Wake up with me into a new dawn of hope, healing, and discovery. Men are waiting.
+      </p>
 
       <p class="center">
         Speak your truth!<br />
@@ -182,9 +181,25 @@
         nothing.<a id="f1-inline" href="#f1"><sup>1</sup></a> This is your
         invitation to consider the impact of the current course and what <em>you</em>
         can do to make a difference. If you care about preserving/​reclaiming
-        the power of the NWTA in a post Covid world, settle in for a detailed
-        discussion.
+        the power of the NWTA in a post Covid world, add your voice and scroll down for a more detailed discussion.
       </p>
+
+      <div id="signatures" class="container responses">
+        <iframe
+          src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRZPBXnb2zgcsgE1IOXC7sGqpu-FZ0G00xCWvbVYDtqdmy8EbmX2XAAdpUP1qVGzoRGeJTQv5KNdXVX/pubhtml?gid=542723662&amp;single=true&amp;widget=true&amp;headers=false"
+          width="640" height="400" marginheight="0" marginwidth="0">Loading…</iframe>
+      </div>
+
+      <p class="center"><em>Signatures are meant to convey general support and do not imply 100% agreement with every
+          point listed above.</em></p>
+
+      <div id="signatures" class="container">
+        <iframe
+          src="https://docs.google.com/forms/d/e/1FAIpQLSdMZfvtpjeESslV-Pz7WVAhorteS9Ie4_3TlXvImrVVU7DRcQ/viewform?embedded=true"
+          width="640" height="1000" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+      </div>
+
+      <h2>History and Context</h2>
 
       <p>Two data points inform this effort:</p>
 
@@ -454,21 +469,6 @@
       </p>
 
       <p>Men are waiting.</p>
-
-      <div id="signatures" class="container responses">
-        <iframe
-          src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRZPBXnb2zgcsgE1IOXC7sGqpu-FZ0G00xCWvbVYDtqdmy8EbmX2XAAdpUP1qVGzoRGeJTQv5KNdXVX/pubhtml?gid=542723662&amp;single=true&amp;widget=true&amp;headers=false"
-          width="640" height="400" marginheight="0" marginwidth="0">Loading…</iframe>
-      </div>
-
-      <p class="center"><em>Signatures are meant to convey general support and do not imply 100% agreement with every
-          point listed above.</em></p>
-
-      <div id="signatures" class="container">
-        <iframe
-          src="https://docs.google.com/forms/d/e/1FAIpQLSdMZfvtpjeESslV-Pz7WVAhorteS9Ie4_3TlXvImrVVU7DRcQ/viewform?embedded=true"
-          width="640" height="1000" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-      </div>
 
       <div class="flex-row" style="padding:1em">
         <img class="venmo" src="rhpeterson-venmo.png">
