pad a paragraph more

--- a/index.html
+++ b/index.html
@@ -108,6 +108,10 @@
       max-width: 20rem;
     }
 
+    .padded {
+      padding: 1em;
+    }
+
     .card {
       margin: 0;
       width: auto;
@@ -131,8 +135,8 @@
 
 <body>
   <div class="document">
-    <div class="content">
-      <h3>Calling on MKPUSA to honor its agreements and return the NWTA to local control</h3>
+    <div class="content center">
+      <h2 style="margin:0;">Calling on MKPUSA to honor its agreements and return the NWTA to local control</h2>
     </div>
   </div>
   <div class="document">
@@ -472,7 +476,7 @@
 
       <div class="flex-row" style="padding:1em">
         <img class="venmo" src="rhpeterson-venmo.png">
-        <p>Contributions needed and welcome! Donations will increase visibility of this effort by funding a Google
+        <p class="padded">Contributions needed and welcome! Donations will increase visibility of this effort by funding a Google
           Adwords campaign to list this site at or near the top of a Google search for the ManKind Project or MKPUSA.
           Funds remaining after conclusion of this effort will be held in reserve for the NWTA general scholarship fund.
         </p>
