Add better scroll down prompt

--- a/index.html
+++ b/index.html
@@ -185,8 +185,10 @@
         nothing.<a id="f1-inline" href="#f1"><sup>1</sup></a> This is your
         invitation to consider the impact of the current course and what <em>you</em>
         can do to make a difference. If you care about preserving/​reclaiming
-        the power of the NWTA in a post Covid world, add your voice and scroll down for a more detailed discussion.
+        the power of the NWTA in a post Covid world, add your voice.
       </p>
+
+      <h2><a href="history-and-context">scroll down</a> (<strong>PAST the signatures</strong>) for a complete discussion of why the NWTA needs to be returned to local control</h2>
 
       <div id="signatures" class="container responses">
         <iframe
@@ -203,7 +205,7 @@
           width="640" height="1000" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
       </div>
 
-      <h2>History and Context</h2>
+      <h2 id="history-and-context">History and Context</h2>
 
       <p>Two data points inform this effort:</p>
 
